<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"

    tools:context="com.coe_reservation_project_year1_2.testcontact.ContactActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/green"

        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:src="@mipmap/arrowback_contact_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"

            android:layout_marginTop="@android:dimen/dialog_min_width_major"
            android:text="Contacts"

            android:textColor="@color/white"
            android:textSize="25dp"
            android:textStyle="bold" />


    </RelativeLayout>


        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"

                android:gravity="center">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="150dp"
                    android:src="@drawable/contact_img" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="165dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"

                android:background="@drawable/contact_bk"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contacs"
                    android:textColor="@color/dark_green"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contacs1"
                    android:textColor="@color/dark_green"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/contacs2"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/contacs3"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contacs4"
                    android:textColor="@color/black"
                    android:layout_marginBottom="10dp"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="140dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/contact_bk"
                android:orientation="vertical">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contacs5"
                    android:textSize="15dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:textSize="13dp"
                    android:layout_height="wrap_content"
                    android:text="@string/contacs6"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_marginTop="5dp"
                    android:textSize="13dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contacs7"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_marginTop="5dp"
                    android:textSize="13dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contacs8"
                    android:textColor="@color/black" />





            </LinearLayout>



        </LinearLayout>





</LinearLayout>
